# zutto

./: .eslintignore  .eslintrc.json  .gitignore  .prettierrc.js  LICENSE  README.md  index.html  package.json  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
docs/: LICENSE-MIT
src/: app.tsx  index.tsx  routes.ts  types.ts
src-tauri/: Cargo.toml  build.rs  rustfmt.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: connection.rs  mod.rs  result.rs  table.rs  tabs.rs
src-tauri/src/data/: enums.rs  mod.rs  structs.rs
src-tauri/src/store/: client.rs  enums.rs  mod.rs  state.rs  store.rs  structs.rs
src-tauri/src/utils/: mod.rs
src/actions/: index.ts
src/components/: database-card.tsx
src/components/actions/: index.ts
src/components/base/: alert.tsx  button.tsx  checkbox.tsx  grid.tsx  heading.tsx  index.ts  input.tsx  logo.tsx  menu.tsx  modal.tsx
src/components/cards/: action-card.tsx  database-card.tsx  index.ts  table-card.tsx
src/components/error/: error-container.tsx  index.ts
src/components/explorer/: checkbox-column.tsx  column.tsx  data-cell.tsx  index.ts  table.tsx  tabs.tsx
src/components/explorer/table/: cell.tsx  data-cell.tsx  table.tsx  wrapper.tsx
src/components/explorer/tabs/: index.tsx  item.tsx
src/components/home/: action-card.tsx  database-card.tsx  index.ts
src/config/: index.ts
src/directives/: click-outside.ts  index.ts
src/errors/: 404.tsx
src/hooks/: form.ts
src/pages/: about.data.ts  about.tsx  explorer.tsx  home.tsx  index.ts  not-found.tsx  tables.tsx
src/resources/: fetch-all-tables.ts  fetch-recent-dbs.ts  index.ts
src/routes/: index.ts  link.ts
src/stores/: index.ts  index.tsx
src/styles/: index.tsx
src/utils/: class-name.ts  index.ts  tauri.ts
vite/: env.d.ts
vite/plugins/svg/: index.ts  parser.ts
